--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -7,6 +7,9 @@
   font-variation-settings:
     "wdth" 100;
 }
+.text-center{
+    text-align: center;
+}
 
 
 /*nav styles */
@@ -88,11 +91,15 @@ nav ul {
     border-radius: 10px;
     padding: 130px 150px;
     text-align: center;
-    margin-top: 130px;
+    
 }
 main{
     max-width: 1140px;
     margin: 0 auto;
+}
+.main-section{
+    margin-top: 130px;
+    margin-bottom: 130px;
 }
 .item-description{
     font-weight: 600px;
@@ -100,4 +107,50 @@ main{
 .about-items{
     display:flex;
     justify-content: space-around;
+}
+.skills-container{
+    display: flex;
+    gap: 50px;
+}
+.skill{
+    padding: 30px;
+    border-radius: 5px;
+    box-shadow: 0px 6px 50px 0px aquamarine;
+}
+.resume-container{
+    display: flex;
+    gap: 24px;
+}
+.experience-description{
+    color: #757575;
+}
+.experience-sub-title{
+    color: #757575;
+    font-size: 20px;
+    font-weight: 600px;
+    margin-bottom: 20px;
+}
+.resume hr{
+    margin: 30px;
+}
+.resume-download-cv{
+    margin-top: 50px;
+}
+footer{
+    padding: 130px 230px;
+    display: flex;
+    gap: 100px;
+}
+.footer-column{
+    width: 50%;
+}
+footer input[type="text"]footer input[type="email"]footer textarea{
+    height: 64px;
+    border-radius: 5px;
+    background-color: white;
+    display: block;
+    width: 100%;
+    padding: 10px 20px;
+    margin-bottom: 24px;
+    border: none;
 }
